opnieuw begingen mobiel
grid toegepast
om muis goed neer te zetten

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </section> -->
 
 
-        <section class="wolkje"> <!--tekst kopje-->
-            <p>Goodmorning, <br /></Br>Shall we start with a story?</p>
+        <section class="wolkje"> <!--tekstballon en button naar lessons-->
+            <p>Goodmorning, <br>Shall we start with a story?</br></p>
 
             <button class="kruisje"><svg width="18px" height="18px" viewBox="0 -0.5 25 25" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -32,11 +32,11 @@
         </section>
 
 
-        <section class="muis"> <!--dier-->
-            <img src="assets/Group 12.png" alt="muis">
+        <section class="muis"> <!--dier muis-->
+            <img src="assets/group12.png" alt="muis">
         </section>
 
-        <section class="menu"> <!--knop onderin -->
+        <section class="menu"> <!--button hamburger onderin -->
             <a href="menu.html"><button class="hamburger"><svg fill="#ffffff" width="35px" height="45px"
                         viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -45,7 +45,6 @@
         </section>
 
     </main>
-
 
 </body>
 
