--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
         <section class="wolkje"> <!--tekstballon en button naar lessons-->
-            <p>Goodmorning, <br>Shall we start with a story?</br></p>
+            <p>Goodmorning, <br>Shall we start with a story?</p>
 
             <button class="kruisje"><svg width="18px" height="18px" viewBox="0 -0.5 25 25" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
