--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
         <section class="wolkje"> <!--tekstballon en button naar lessons-->
-            <p>Goodmorning, <br>Shall we start with a story?</p>
+            <h1>Goodmorning, <br>Shall we start with a story?</h1>
 
             <button class="kruisje"><svg width="18px" height="18px" viewBox="0 -0.5 25 25" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -32,17 +32,17 @@
         </section>
 
 
-        <section class="muis"> <!--dier muis-->
+        <figure class="muis"> <!--dier muis-->
             <img src="assets/group12.png" alt="muis">
-        </section>
+        </figure>
 
-        <section class="menu"> <!--button hamburger onderin -->
+        <div class="menu"> <!--button hamburger onderin -->
             <a href="menu.html" class="hamburger"><svg class="streepje" fill="#ffffff" width="35px" height="45px"
                         viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M 6.0626 19.5390 L 49.9144 19.5390 C 50.8984 19.5390 51.7187 18.7656 51.7187 17.7812 C 51.7187 16.7968 50.8984 16 49.9144 16 L 6.0626 16 C 5.0782 16 4.2813 16.7968 4.2813 17.7812 C 4.2813 18.7656 5.0782 19.5390 6.0626 19.5390 Z M 6.0626 29.7578 L 49.9144 29.7578 C 50.8984 29.7578 51.7187 28.9843 51.7187 28 C 51.7187 26.9921 50.8984 26.1953 49.9144 26.1953 L 6.0626 26.1953 C 5.0782 26.1953 4.2813 26.9921 4.2813 28 C 4.2813 28.9843 5.0782 29.7578 6.0626 29.7578 Z M 6.0626 40 L 49.9144 40 C 50.8984 40 51.7187 39.2031 51.7187 38.1953 C 51.7187 37.2109 50.8984 36.4375 49.9144 36.4375 L 6.0626 36.4375 C 5.0782 36.4375 4.2813 37.2109 4.2813 38.1953 C 4.2813 39.2031 5.0782 40 6.0626 40 Z" />
                     </svg></a>
-        </section>
+                </div>
 
     </main>
 
