--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
 
     <main>
 
-        <!-- <section class="today">Goal
-            <p>Today listening</p>
-            <p>00:00</p>
-            <p>of your 5-minute goal</p>
-        </section> -->
 
-
+<div class="info">
         <section class="wolkje"> <!--tekstballon en button naar lessons-->
             <h1>Goodmorning, <br>Shall we start with a story?</h1>
 
@@ -35,6 +30,8 @@
         <figure class="muis"> <!--dier muis-->
             <img src="assets/group12.png" alt="muis">
         </figure>
+        
+    </div>
 
         <div class="menu"> <!--button hamburger onderin -->
             <a href="menu.html" class="hamburger"><svg class="streepje" fill="#ffffff" width="35px" height="45px"
