--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <script defer src="scripts/script.js"></script>
 </head>
 
 <body>
@@ -15,8 +16,9 @@
 
 <div class="info">
         <section class="wolkje"> <!--tekstballon en button naar lessons-->
-            <h1>Goodmorning, <br>Shall we start with a story?</h1>
+            <h1><span>Goodmorning,</span>Shall we start with a story?</h1>
 
+            <!--button kruisje als je klikt dat wolkje verdwijnt-->
             <button class="kruisje"><svg width="18px" height="18px" viewBox="0 -0.5 25 25" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -24,6 +26,7 @@
                         fill="#000000" />
                 </svg></button>
 
+                <!--button die verwijst naar kopje lessons-->
                 <a href="" class="lessons">Let's do it!</a>
                 
         </section>
@@ -49,7 +52,6 @@
 
     </main>
 
-    <script src="scripts/script.js"></script>
 </body>
 
 </html>
