wolkje tekst JavaScript
dat de tekst na 12 uur 's nachts verandert t/m 6 uur 's ochtends, dat de button verdwijnt om te spelen en dat er een tekst regel bij komt

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
 <div class="info">
         <section class="wolkje"> <!--tekstballon en button naar lessons-->
-            <h1><span>Goodmorning,</span>Shall we start with a story?</h1>
+            <!-- <h1><span>Goodmorning,</span>Shall we start with a story?</h1> -->
+            <h1>
+                <span class="greeting">Good morning,</span>
+                <span class="sub-text">Shall we start with a story?</span>
+            </h1>
+
+            <span class="goodnight-message"></span> <!-- Nieuwe span voor de goodnight boodschap -->
 
             <!--button kruisje als je klikt dat wolkje verdwijnt-->
             <button class="kruisje"><svg width="18px" height="18px" viewBox="0 -0.5 25 25" fill="none"
