error muis opgelost

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         </filter>
                         <linearGradient id="c" x1="148.919" x2="149.501" y1="141.837" y2="253.132"
                             gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#E3C795" />
+                            <stop offset="1" stop-color="#E3C795" />
                             <stop offset="1" stop-color="#C2A674" />
                         </linearGradient>
                     </defs>
